--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV - Luis Sérgio Moreira da Silva</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <!--INFORMAÇÕES GERAIS-->
 <div>
-    <img src="img/file.jpeg" alt="foto">
+    <img src="file.jpeg" alt="foto">
   <h1>INFORMAÇÕES GERAIS</h1>
   <ul>
     <li><b>Nome:</b> Luis Sérgio Moreira da Silva</li>
     <li><b>Endereço:</b> Passagem Fé em Deus, 41A -Tenoné - Belém - Pará 66820-295</li>
     <li><b>Email:</b> sergiovsk@gmail.com</li>
     <li><b>Telefone:</b> (91) 98759-6616 e (91) 99342-8511</li>
-    <li><b>Informações:</b> Bacharel e Licenciado em Química (2005), Graduado em Análise e Desenvolvimento de Sistemas 
-    (2020-2022),  Fluente em Inglês, bom comunicador e dotado de iniciativa.</li>
+    <li><b>Bacharel e Licenciado em Química (2005), Graduado em Análise e Desenvolvimento de Sistemas 
+    (2020-2022),  Fluente em Inglês, bom comunicador e dotado de iniciativa.</b> </li>
   </ul>
 </div>
 
